--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "npm run clean && tsc --pretty --outDir ./dist/ || exit 0",
     "watch": "npm run clean && tsc --pretty -w --outDir ./dist/",
     "clean": "rm -rf ./dist/",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha -r ts-node/register tests/*.spec.ts tests/**/*.spec.ts",
     "package": "npm run build && cp package.json dist/ && cp README.md dist/ && cp LICENSE dist/ && npm pack dist/"
   },
   "repository": {
@@ -21,6 +21,11 @@
   },
   "homepage": "https://github.com/cpascoe95/subobject#readme",
   "devDependencies": {
+    "@types/chai": "4.1.3",
+    "@types/mocha": "5.2.0",
+    "chai": "4.1.2",
+    "mocha": "5.2.0",
+    "ts-node": "6.0.5",
     "typescript": "2.8.3"
   }
 }
